2011-01-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed, unskip passing canvas tests in GTK port.

        * platform/gtk/Skipped: Unskip passing canvas tests.
        * platform/gtk/fast/canvas/arc360-expected.checksum: Added.
        * platform/gtk/fast/canvas/arc360-expected.png: Added.
        * platform/gtk/fast/canvas/arc360-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-as-image-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-as-image-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-as-image-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-as-image-incremental-repaint-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-as-image-incremental-repaint-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-as-image-incremental-repaint-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-before-css-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-before-css-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-before-css-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-bg-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-bg-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-bg-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-bg-zoom-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-bg-zoom-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-bg-zoom-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-incremental-repaint-2-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-incremental-repaint-2-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-incremental-repaint-2-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-resize-reset-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-resize-reset-expected.png: Added.